Table galaxy {
  galaxy_id INT [PRIMARY KEY, INCREMENT, NOT NULL]
  name VARCHAR [NOT NULL, UNIQUE]
  distance_from_earth_in_megaparsecs INT
  shape TEXT
  is_visible_to_the_naked_eye BOOLEAN
}

Table star {
  star_id INT [PRIMARY KEY, INCREMENT, NOT NULL]
  name VARCHAR [NOT NULL, UNIQUE]
  solar_mass NUMERIC
  is_visible_to_the_naked_eye BOOLEAN
  galaxy_id INT [ref: > galaxy.galaxy_id]
}

Table planet {
  planet_id INT [PRIMARY KEY, INCREMENT, NOT NULL]
  name VARCHAR [NOT NULL, UNIQUE]
  year_of_discovery INT
  type TEXT
  star_id INT [ref: > star.star_id]
}

Table moon {
  moon_id INT [PRIMARY KEY, INCREMENT, NOT NULL]
  name VARCHAR [NOT NULL, UNIQUE]
  lunar_diameter NUMERIC
  lunar_mass NUMERIC
  planet_id INT [ref: > planet.planet_id]
}

Table dwarf_planet {
  dwarf_planet_id INT [PRIMARY KEY, INCREMENT, NOT NULL]
  name VARCHAR [NOT NULL, UNIQUE]
  star_id INT [ref: > star.star_id]
}
